--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ DEBUG=True
 SECRET_KEY=django-insecure-+7azj(_fpsjzgc14%a0*4umus-ueczyi0hb63t_b3u!0d%u9-1
 
 # MariaDB Configuration (Used when ENVIRONMENT=production)
-DB_NAME=hms_prod
-DB_USER=hms_user
-DB_PASSWORD=hms_password
+DB_NAME=hms
+DB_USER=root
+DB_PASSWORD=141778215aA!
 DB_HOST=127.0.0.1
 DB_PORT=3306
