--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-ENVIRONMENT=development
+ENVIRONMENT=production
 DEBUG=True
 SECRET_KEY=django-insecure-+7azj(_fpsjzgc14%a0*4umus-ueczyi0hb63t_b3u!0d%u9-1
 
